# assignment-3-devscale

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/modules/productDiscovery/: prompt.py  router.py
app/utils/: openai.py
templates/: index.html  prd_facilitator.html
